force-app/main/default/objects/dtmContactoBusiness__c/fields/dtmDireccionCompleta__c.field-meta.xml
<CustomField>
    <fullName>dtmDireccionCompleta__c</fullName>
    <description>DTT-240327-MVP1-concatenación de dirección con colonia y número interior y exterior</description>
    <formula>dtmDireccion__Street__s &amp;&quot;,&quot;&amp;dtmNumeroExterior__c&amp;&quot;,&quot;&amp;dtmNumeroInterior__c&amp;&quot;,&quot;&amp;dtmColonia__c&amp;&quot;,&quot;&amp;dtmDireccion__PostalCode__s&amp;&quot;,&quot;&amp;dtmDireccion__City__s &amp;&quot;,&quot;&amp;TEXT(dtmDireccion__StateCode__s)&amp;&quot;,&quot;&amp;TEXT(dtmDireccion__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Completa</label>
    <type>Text</type>
</CustomField>