force-app/main/default/objects/dtmContactoBusiness__c/fields/dtmNumeroExterior__c.field-meta.xml
<CustomField>
    <fullName>dtmNumeroExterior__c</fullName>
    <description>DTT-240327-MVP1-campo para almacenar número exterior de la dirección</description>
    <label>Número Exterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>