force-app/main/default/objects/dtmContactoBusiness__c/fields/dtmNumeroInterior__c.field-meta.xml
<CustomField>
    <fullName>dtmNumeroInterior__c</fullName>
    <description>DTT-240327-MVP1-campo para almacenamiento de número interior de la dirección del contacto</description>
    <label>Número Interior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>