force-app/main/default/objects/dtmContactoBusiness__c/fields/dtmTratamiento__c.field-meta.xml
<CustomField>
    <fullName>dtmTratamiento__c</fullName>
    <description>DTT-240403-MVP1-TEL-59 Campo para valores &quot;Tratamiento&quot;</description>
    <label>Tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act.</fullName>
            </value>
            <value>
                <fullName>Arqt.</fullName>
            </value>
            <value>
                <fullName>Captn.</fullName>
            </value>
            <value>
                <fullName>Cmdte.</fullName>
            </value>
            <value>
                <fullName>Cor.</fullName>
            </value>
            <value>
                <fullName>CP.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Dra.</fullName>
            </value>
            <value>
                <fullName>Eco.</fullName>
            </value>
            <value>
                <fullName>Emb.</fullName>
            </value>
            <value>
                <fullName>Gral.</fullName>
            </value>
            <value>
                <fullName>Ing.</fullName>
            </value>
            <value>
                <fullName>Lic.</fullName>
            </value>
            <value>
                <fullName>Mat.</fullName>
            </value>
            <value>
                <fullName>May.</fullName>
            </value>
            <value>
                <fullName>Mtro.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Sra.</fullName>
            </value>
            <value>
                <fullName>Srita.</fullName>
            </value>
            <value>
                <fullName>Tte.</fullName>
            </value>
            <value>
                <fullName>Tteco.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>